# IterationIQ

./: .bazelrc  .dockerignore  .gitignore  .settings_key  BUILD.bazel  DOCKER_GUIDE.txt  Dockerfile  Dockerfile.backend  Dockerfile.dev  LOCAL_SETUP.md  MODULE.bazel  NOT_COMPLETED_FIX.md  NOT_COMPLETED_FIX_V2.md  PROJECT_STRUCTURE.md  PUSH_INSTRUCTIONS.md  README.md  TROUBLESHOOTING.md  app.py  app_modified.py  build-docker.sh  docker-compose.dev.yml  docker-compose.yml  docker-image-sharing.md  fix_added_during_sprint.py  fixed_calculation.py  jira_settings.json.bak  minimal_app.py  minimal_fix.py  proper_sprint_analysis.py  quick_fix.py  requirements.txt  requirements_local.txt  set_jira_creds.sh  settings_manager.py  start_local.sh  test_sprint_calculation.py  test_sprint_debug.py  user-docker-compose.yml  user_tracking.db
.github/git-templates/hooks/: pre-push
backend/: add_org_analytics.py  ai_sprint_insights.py  app.py  user_tracking.db  user_tracking.py
backend/scripts/: jira_sprint_report.py  jira_sprint_report.py.backup  user_capacity_analysis.py
data/: device_access.json
docs/: CLEANUP_NOTES.md  deploy_steps.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/components/: AnalyticsDashboard.js  BestPractices.js  CapacityAnalysis.js  Dashboard.js  DeviceCounter.js  Settings.js  SprintCross.js  SprintReport.js
scripts/: jira_sprint_report.py  user_capacity_analysis.py
templates/: error.html  index.html  shared_report.html  simple_test.html
(+1 files in other folders)
