module(
    name = "[your_module_name]",
    repo_name = "com_galaxy_corp_thoughtspot_dev_[your_repo_name]",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.6")
go_sdk.nogo(
    nogo = "@//tools/nogo",
)
use_repo(go_sdk, "go_default_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
